RESOLVED FIXED58386
[chromium] Fix spellcheck regression in context menus
https://bugs.webkit.org/show_bug.cgi?id=58386
Summary [chromium] Fix spellcheck regression in context menus
John Abd-El-Malek
Reported 2011-04-12 15:54:13 PDT
[chromium] Fix spellcheck regression in context menus
Attachments
Patch (2.53 KB, patch)
2011-04-12 15:57 PDT, John Abd-El-Malek
jianli: review+
John Abd-El-Malek
Comment 1 2011-04-12 15:57:53 PDT
John Abd-El-Malek
Comment 2 2011-04-12 15:58:45 PDT
My original change was incorrect, since the offset is 0 when the first word is the one that's misspelt. The length will be non-zero if there's a misspelling though, per WebSpellCheckClient comments.
John Abd-El-Malek
Comment 3 2011-04-12 16:22:23 PDT
Note You need to log in before you can comment on or make changes to this bug.