2011-04-12  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Jian Li.

        [chromium] Fix spellcheck regression in context menus
        https://bugs.webkit.org/show_bug.cgi?id=58386

        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
2011-04-12  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Jian Li.

        [chromium] Fix spellcheck regression in context menus
        https://bugs.webkit.org/show_bug.cgi?id=58386

        * platform/chromium/test_expectations.txt:


git-svn-id: svn://svn.chromium.org/blink/trunk@83660 bbb929c8-8fbe-4397-9dbb-9b2b20218538