third_party/WebKit/Source/WebKit/chromium/src/ContextMenuClientImpl.cpp
@@ -265,9 +265,8 @@ PlatformMenuDescription ContextMenuClientImpl::getCustomMenuFromDefaultItems(
                     m_webView->spellCheckClient()->spellCheck(
                         data.misspelledWord, misspelledOffset, misspelledLength,
                         &data.dictionarySuggestions);
-                    if (!misspelledOffset)
+                    if (!misspelledLength)
                         data.misspelledWord.reset();
-
                 }
             }
         }
